// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{
  processorName: 'intercept',
  path: 'intercept',
  catalogKind: 'entity'
}' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{
  processorName: 'interceptSendToEndpoint',
  path: 'interceptSendToEndpoint',
  catalogKind: 'entity'
}' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{
  processorName: 'onCompletion',
  path: 'onCompletion',
  catalogKind: 'entity'
}' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": true,
  "canRemoveStep": false,
  "canReplaceStep": false,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{
  processorName: 'onCompletion',
  path: 'onCompletion',
  catalogKind: 'entity'
}' processor 2`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": true,
  "canRemoveStep": false,
  "canReplaceStep": false,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{
  processorName: 'onException',
  path: 'onException',
  catalogKind: 'entity'
}' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{ processorName: 'from', path: 'from', catalogKind: 'entity' }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{ processorName: 'log', path: 'log', catalogKind: 'processor' }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": true,
  "canHavePreviousStep": true,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{ processorName: 'route', path: 'route', catalogKind: 'entity' }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity getNodeInteraction should return the correct interaction for the '{ processorName: 'to', path: 'to', catalogKind: 'processor' }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": true,
  "canHavePreviousStep": true,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnCompletionVisualEntity should serialize the entity 1`] = `
{
  "onCompletion": {
    "id": "onCompletion-1234",
    "mode": "AfterConsumer",
  },
}
`;
